; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_wm831x-core.c_wm831x_auxadc_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_wm831x-core.c_wm831x_auxadc_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wm831x = type { i32, i32 }

@WM831X_AUXADC_CONTROL = common dso_local global i32 0, align 4
@WM831X_AUX_ENA = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"Failed to enable AUXADC: %d\0A\00", align 1
@WM831X_AUXADC_SOURCE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [33 x i8] c"Failed to set AUXADC source: %d\0A\00", align 1
@WM831X_AUX_CVT_ENA = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [28 x i8] c"Failed to start AUXADC: %d\0A\00", align 1
@.str.3 = private unnamed_addr constant [26 x i8] c"Timed out reading AUXADC\0A\00", align 1
@EBUSY = common dso_local global i32 0, align 4
@WM831X_AUXADC_DATA = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [32 x i8] c"Failed to read AUXADC data: %d\0A\00", align 1
@WM831X_AUX_DATA_SRC_MASK = common dso_local global i32 0, align 4
@WM831X_AUX_DATA_SRC_SHIFT = common dso_local global i32 0, align 4
@WM831X_AUX_CAL = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [28 x i8] c"Data from source %d not %d\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@WM831X_AUX_DATA_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wm831x_auxadc_read(%struct.wm831x* %0, i32 %1) #0 {
  %3 = alloca %struct.wm831x*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.wm831x* %0, %struct.wm831x** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 10, i32* %5, align 4
  %8 = load %struct.wm831x*, %struct.wm831x** %3, align 8
  %9 = getelementptr inbounds %struct.wm831x, %struct.wm831x* %8, i32 0, i32 0
  %10 = call i32 @mutex_lock(i32* %9)
  %11 = load %struct.wm831x*, %struct.wm831x** %3, align 8
  %12 = load i32, i32* @WM831X_AUXADC_CONTROL, align 4
  %13 = load i32, i32* @WM831X_AUX_ENA, align 4
  %14 = load i32, i32* @WM831X_AUX_ENA, align 4
  %15 = call i32 @wm831x_set_bits(%struct.wm831x* %11, i32 %12, i32 %13, i32 %14)
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %24

18:                                               ; preds = %2
  %19 = load %struct.wm831x*, %struct.wm831x** %3, align 8
  %20 = getelementptr inbounds %struct.wm831x, %struct.wm831x* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* %6, align 4
  %23 = call i32 (i32, i8*, ...) @dev_err(i32 %21, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %22)
  br label %134

24:                                               ; preds = %2
  %25 = load i32, i32* %4, align 4
  store i32 %25, i32* %7, align 4
  %26 = load %struct.wm831x*, %struct.wm831x** %3, align 8
  %27 = load i32, i32* @WM831X_AUXADC_SOURCE, align 4
  %28 = load i32, i32* %7, align 4
  %29 = shl i32 1, %28
  %30 = call i32 @wm831x_reg_write(%struct.wm831x* %26, i32 %27, i32 %29)
  store i32 %30, i32* %6, align 4
  %31 = load i32, i32* %6, align 4
  %32 = icmp slt i32 %31, 0
  br i1 %32, label %33, label %39

33:                                               ; preds = %24
  %34 = load %struct.wm831x*, %struct.wm831x** %3, align 8
  %35 = getelementptr inbounds %struct.wm831x, %struct.wm831x* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* %6, align 4
  %38 = call i32 (i32, i8*, ...) @dev_err(i32 %36, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0), i32 %37)
  br label %134

39:                                               ; preds = %24
  %40 = load %struct.wm831x*, %struct.wm831x** %3, align 8
  %41 = load i32, i32* @WM831X_AUXADC_CONTROL, align 4
  %42 = load i32, i32* @WM831X_AUX_CVT_ENA, align 4
  %43 = load i32, i32* @WM831X_AUX_CVT_ENA, align 4
  %44 = call i32 @wm831x_set_bits(%struct.wm831x* %40, i32 %41, i32 %42, i32 %43)
  store i32 %44, i32* %6, align 4
  %45 = load i32, i32* %6, align 4
  %46 = icmp slt i32 %45, 0
  br i1 %46, label %47, label %53

47:                                               ; preds = %39
  %48 = load %struct.wm831x*, %struct.wm831x** %3, align 8
  %49 = getelementptr inbounds %struct.wm831x, %struct.wm831x* %48, i32 0, i32 1
  %50 = load i32, i32* %49, align 4
  %51 = load i32, i32* %6, align 4
  %52 = call i32 (i32, i8*, ...) @dev_err(i32 %50, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0), i32 %51)
  br label %129

53:                                               ; preds = %39
  br label %54

54:                                               ; preds = %73, %53
  %55 = call i32 @msleep(i32 1)
  %56 = load %struct.wm831x*, %struct.wm831x** %3, align 8
  %57 = load i32, i32* @WM831X_AUXADC_CONTROL, align 4
  %58 = call i32 @wm831x_reg_read(%struct.wm831x* %56, i32 %57)
  store i32 %58, i32* %6, align 4
  %59 = load i32, i32* %6, align 4
  %60 = icmp slt i32 %59, 0
  br i1 %60, label %61, label %63

61:                                               ; preds = %54
  %62 = load i32, i32* @WM831X_AUX_CVT_ENA, align 4
  store i32 %62, i32* %6, align 4
  br label %63

63:                                               ; preds = %61, %54
  br label %64

64:                                               ; preds = %63
  %65 = load i32, i32* %6, align 4
  %66 = load i32, i32* @WM831X_AUX_CVT_ENA, align 4
  %67 = and i32 %65, %66
  %68 = icmp ne i32 %67, 0
  br i1 %68, label %69, label %73

69:                                               ; preds = %64
  %70 = load i32, i32* %5, align 4
  %71 = add nsw i32 %70, -1
  store i32 %71, i32* %5, align 4
  %72 = icmp ne i32 %71, 0
  br label %73

73:                                               ; preds = %69, %64
  %74 = phi i1 [ false, %64 ], [ %72, %69 ]
  br i1 %74, label %54, label %75

75:                                               ; preds = %73
  %76 = load i32, i32* %6, align 4
  %77 = load i32, i32* @WM831X_AUX_CVT_ENA, align 4
  %78 = and i32 %76, %77
  %79 = icmp ne i32 %78, 0
  br i1 %79, label %80, label %87

80:                                               ; preds = %75
  %81 = load %struct.wm831x*, %struct.wm831x** %3, align 8
  %82 = getelementptr inbounds %struct.wm831x, %struct.wm831x* %81, i32 0, i32 1
  %83 = load i32, i32* %82, align 4
  %84 = call i32 (i32, i8*, ...) @dev_err(i32 %83, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.3, i64 0, i64 0))
  %85 = load i32, i32* @EBUSY, align 4
  %86 = sub nsw i32 0, %85
  store i32 %86, i32* %6, align 4
  br label %129

87:                                               ; preds = %75
  %88 = load %struct.wm831x*, %struct.wm831x** %3, align 8
  %89 = load i32, i32* @WM831X_AUXADC_DATA, align 4
  %90 = call i32 @wm831x_reg_read(%struct.wm831x* %88, i32 %89)
  store i32 %90, i32* %6, align 4
  %91 = load i32, i32* %6, align 4
  %92 = icmp slt i32 %91, 0
  br i1 %92, label %93, label %99

93:                                               ; preds = %87
  %94 = load %struct.wm831x*, %struct.wm831x** %3, align 8
  %95 = getelementptr inbounds %struct.wm831x, %struct.wm831x* %94, i32 0, i32 1
  %96 = load i32, i32* %95, align 4
  %97 = load i32, i32* %6, align 4
  %98 = call i32 (i32, i8*, ...) @dev_err(i32 %96, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.4, i64 0, i64 0), i32 %97)
  br label %128

99:                                               ; preds = %87
  %100 = load i32, i32* %6, align 4
  %101 = load i32, i32* @WM831X_AUX_DATA_SRC_MASK, align 4
  %102 = and i32 %100, %101
  %103 = load i32, i32* @WM831X_AUX_DATA_SRC_SHIFT, align 4
  %104 = ashr i32 %102, %103
  %105 = sub nsw i32 %104, 1
  store i32 %105, i32* %7, align 4
  %106 = load i32, i32* %7, align 4
  %107 = icmp eq i32 %106, 14
  br i1 %107, label %108, label %110

108:                                              ; preds = %99
  %109 = load i32, i32* @WM831X_AUX_CAL, align 4
  store i32 %109, i32* %7, align 4
  br label %110

110:                                              ; preds = %108, %99
  %111 = load i32, i32* %7, align 4
  %112 = load i32, i32* %4, align 4
  %113 = icmp ne i32 %111, %112
  br i1 %113, label %114, label %123

114:                                              ; preds = %110
  %115 = load %struct.wm831x*, %struct.wm831x** %3, align 8
  %116 = getelementptr inbounds %struct.wm831x, %struct.wm831x* %115, i32 0, i32 1
  %117 = load i32, i32* %116, align 4
  %118 = load i32, i32* %7, align 4
  %119 = load i32, i32* %4, align 4
  %120 = call i32 (i32, i8*, ...) @dev_err(i32 %117, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.5, i64 0, i64 0), i32 %118, i32 %119)
  %121 = load i32, i32* @EINVAL, align 4
  %122 = sub nsw i32 0, %121
  store i32 %122, i32* %6, align 4
  br label %127

123:                                              ; preds = %110
  %124 = load i32, i32* @WM831X_AUX_DATA_MASK, align 4
  %125 = load i32, i32* %6, align 4
  %126 = and i32 %125, %124
  store i32 %126, i32* %6, align 4
  br label %127

127:                                              ; preds = %123, %114
  br label %128

128:                                              ; preds = %127, %93
  br label %129

129:                                              ; preds = %128, %80, %47
  %130 = load %struct.wm831x*, %struct.wm831x** %3, align 8
  %131 = load i32, i32* @WM831X_AUXADC_CONTROL, align 4
  %132 = load i32, i32* @WM831X_AUX_ENA, align 4
  %133 = call i32 @wm831x_set_bits(%struct.wm831x* %130, i32 %131, i32 %132, i32 0)
  br label %134

134:                                              ; preds = %129, %33, %18
  %135 = load %struct.wm831x*, %struct.wm831x** %3, align 8
  %136 = getelementptr inbounds %struct.wm831x, %struct.wm831x* %135, i32 0, i32 0
  %137 = call i32 @mutex_unlock(i32* %136)
  %138 = load i32, i32* %6, align 4
  ret i32 %138
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @wm831x_set_bits(%struct.wm831x*, i32, i32, i32) #1

declare dso_local i32 @dev_err(i32, i8*, ...) #1

declare dso_local i32 @wm831x_reg_write(%struct.wm831x*, i32, i32) #1

declare dso_local i32 @msleep(i32) #1

declare dso_local i32 @wm831x_reg_read(%struct.wm831x*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
